# open-half-life

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  PROMPT.md  README.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md
.github/workflows/: build.yml  fuzz.yml
assets/: README.md
cmake/: CheckRepository.cmake  Dependencies.cmake  OhlWarnings.cmake  RenderDependencies.cmake
docs/: ARCHITECTURE.md  CLEAN_ROOM.md  FORMAT_SOURCES.md  IMPORT_READINESS.md  ISO_REPORT.md  MEDIA_IMPORT.md  MILESTONES.md  RENDER_DEPENDENCIES.md
prompts/: 00-shared-agent.md  01-repository-scout.md  02-architecture-reviewer.md  03-implementation-agent.md  04-test-agent.md  05-media-iso-agent.md  06-documentation-agent.md  07-clean-room-reviewer.md  08-integration-agent.md  09-pr-review-agent.md  10-issue-triage-agent.md
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/include/ohl/core/: log.hpp  sha256.hpp
src/core/src/: log.cpp  sha256.cpp
src/media/: CMakeLists.txt
src/media/include/ohl/media/: cancellation.hpp  import_cache.hpp  installshield_cabinet.hpp  iso_inspector.hpp  parser_frame_channel.hpp  parser_parent_handshake.hpp  parser_parent_session.hpp  parser_result_session.hpp  parser_source_read_broker.hpp  payload_layout.hpp  payload_path.hpp  payload_stage.hpp  payload_stream.hpp
src/media/src/: cancellation.cpp  import_cache.cpp  import_cache_internal.hpp  installshield_cabinet.cpp  iso_inspector.cpp  parser_frame_channel.cpp  parser_parent_handshake.cpp  parser_parent_session.cpp  parser_result_session.cpp  parser_source_read_broker.cpp  payload_layout.cpp  payload_path.cpp  payload_stage.cpp  payload_stream.cpp  source_stability.cpp  source_stability_internal.hpp
src/parser/: CMakeLists.txt
src/parser/include/ohl/parser/: protocol.hpp  protocol_messages.hpp
src/parser/src/: parser_worker_service.cpp  parser_worker_service_internal.hpp  protocol.cpp  protocol_messages.cpp
src/platform/: CMakeLists.txt
src/platform/cmake/: IsolatedWorkerLinux.cmake  IsolatedWorkerWindows.cmake
src/platform/include/ohl/platform/: atomic_directory_store.hpp  isolated_worker.hpp  media_source.hpp  platform.hpp
src/platform/src/: atomic_directory_store_internal.hpp  atomic_directory_store_linux.cpp  atomic_directory_store_posix.cpp  atomic_directory_store_unsupported.cpp  isolated_worker.cpp  isolated_worker_internal.hpp  isolated_worker_linux.cpp  isolated_worker_linux_internal.hpp  isolated_worker_unsupported.cpp  isolated_worker_windows.cpp  isolated_worker_windows_internal.hpp  media_parser_worker_linux.cpp  media_source_posix.cpp  media_source_unsupported.cpp  media_source_windows.cpp  platform.cpp
src/vfs/: CMakeLists.txt
src/vfs/include/ohl/vfs/: udf_archive.hpp
src/vfs/src/: udf_archive.cpp  udf_archive_internal.hpp  udf_media_input.cpp  udf_media_input.hpp
tests/: CMakeLists.txt
tests/cmake/: ExpectFailure.cmake
tests/cmake/render_dependencies/: CMakeLists.txt  macho_case.cmake  macho_fixture_generator.cpp  main.cpp  processor_matrix.cmake  run_negative.cmake  sdl_archive_negative.cmake  verify_link_surface.cmake
tests/cmake/render_dependencies/fixtures/: prepare_runtime.cmake  provider.cmake
tests/cmake/render_dependencies/fixtures/archive/vulkan/LICENSES/: Apache-2.0.txt
tests/cmake/render_dependencies/fixtures/archive/vulkan/include/vulkan/: vk_platform.h  vulkan.h
tests/cmake/render_dependencies/fixtures/forbidden/vulkan/: LICENSE.md
tests/cmake/render_dependencies/fixtures/forbidden/vulkan/include/vulkan/: vk_icd.h
tests/cmake/render_dependencies/fixtures/runtime/: CMakeLists.txt  MOLTENVK_LICENSE.txt  moltenvk_stub.cpp  sdl_stub.cpp
tests/cmake/render_dependencies/fixtures/shadowed/volk/vulkan/: vulkan_core.h
tests/cmake/render_dependencies/fixtures/static/sdl/cmake/: SDL3Config.cmake  SDL3ConfigVersion.cmake
tests/cmake/render_dependencies/fixtures/tampered/volk/: LICENSE.md  volk.h
tests/cmake/render_dependencies/fixtures/valid/sdl/cmake/: SDL3Config.cmake  SDL3ConfigVersion.cmake
tests/cmake/render_dependencies/fixtures/valid/sdl/include/SDL3/: SDL.h
tests/cmake/render_dependencies/fixtures/valid/volk/: volk.c  volk.h
tests/cmake/render_dependencies/real_acquisition/: CMakeLists.txt
tests/core/: log_test.cpp  sha256_test.cpp
tests/media/: cancellation_test.cpp  import_cache_test.cpp  installshield_cabinet_test.cpp  iso_inspector_test.cpp  parser_frame_channel_test.cpp  parser_parent_handshake_test.cpp  parser_parent_session_test.cpp  parser_result_session_test.cpp  parser_source_read_broker_test.cpp  payload_layout_test.cpp  payload_path_test.cpp  payload_stage_linux_test.cpp  payload_stage_test.cpp  payload_stream_test.cpp  synthetic_media_test_support.hpp
tests/parser/: parser_worker_service_test.cpp  protocol_fuzz.cpp  protocol_test.cpp
tests/parser/corpus/: enumerate_complete.txt  enumerate_crossed_cancel.txt  stream_cancel.txt  stream_crossed_complete.txt
tests/platform/: atomic_directory_store_linux_test.cpp  isolated_worker_common_test.cpp  isolated_worker_linux_test.cpp  isolated_worker_linux_worker.cpp  isolated_worker_windows_test.cpp  isolated_worker_windows_worker.cpp  media_parser_worker_install_smoke.cmake  media_parser_worker_install_smoke.cpp  media_parser_worker_service_linux_test.cpp  media_source_native_security_test.cpp  media_source_test.cpp  platform_test.cpp
tests/platform/isolated_worker/: linux.cmake  windows.cmake
tests/vfs/: udf_archive_test.cpp
